src/test/deca/context/invalid/non_provided/class_conflict_decl.deca
// Description:
//    Conflit de double déclaration de classe
//
// Resultats:
//    14:6: Class A already declared
// 
// Historique:
//    cree le 21/01/2020

class A {

}

class A {

}